feature: #93-조건에 따라서 보여주는 필터 추가