@@ -2,10 +2,12 @@ package com.example.eumserver.domain.announcement.team.repository;
 
 import com.example.eumserver.domain.announcement.filter.domain.OccupationClassification;
 import com.example.eumserver.domain.announcement.team.domain.QTeamAnnouncement;
+import com.example.eumserver.domain.announcement.team.domain.ScoredAnnouncement;
 import com.example.eumserver.domain.announcement.team.domain.TeamAnnouncement;
 import com.example.eumserver.domain.announcement.team.dto.TeamAnnouncementFilter;
 import com.example.eumserver.domain.announcement.team.dto.TeamAnnouncementResponse;
 import com.example.eumserver.domain.announcement.team.mapper.TeamAnnouncementMapper;
+import com.example.eumserver.domain.post.PostSortingOption;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
@@ -16,6 +18,7 @@ import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -29,20 +32,55 @@ public class TeamAnnouncementCustomRepositoryImpl implements TeamAnnouncementCus
         BooleanExpression predicate = teamAnnouncement.isNotNull();
         predicate = predicate.and(teamAnnouncement.publishedDate.isNotNull());
 
+        if (filter.isExpired()) {
+            predicate.and(teamAnnouncement.closed.eq(false));
+        }
+
         List<OccupationClassification> occupationClassifications = filter.getOccupationClassifications();
         if (occupationClassifications != null && !occupationClassifications.isEmpty()) {
             predicate = predicate.and(teamAnnouncement.occupationClassifications.any().in(occupationClassifications));
         }
 
-        List<TeamAnnouncement> announcements = queryFactory
+        JPAQuery<TeamAnnouncement> query = queryFactory
                 .selectFrom(teamAnnouncement)
-                .where(predicate)
+                .where(predicate);
+
+        switch (filter.getOption()) {
+            case LATEST:
+                System.out.println("latest");
+                query.orderBy(teamAnnouncement.timeStamp.createDate.desc());
+                break;
+            case VIEWS:
+                query.orderBy(teamAnnouncement.views.desc());
+                break;
+            case POPULAR:
+                query.where(teamAnnouncement.views.ne(0L));
+                query.orderBy(teamAnnouncement.publishedDate.desc());
+                break;
+        }
+
+        List<TeamAnnouncement> announcements = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
                 .fetch();
 
-        List<TeamAnnouncementResponse> announcementResponses = announcements.stream()
-                .map(TeamAnnouncementMapper.INSTANCE::entityToResponse).toList();
+        List<TeamAnnouncementResponse> announcementResponses;
+
+        if (filter.getOption() != PostSortingOption.POPULAR) {
+            announcementResponses = announcements.stream()
+                    .map(TeamAnnouncementMapper.INSTANCE::entityToResponse).toList();
+        } else {
+            List<ScoredAnnouncement> popularAnnouncement = getPopularPostList(announcements);
+
+            announcementResponses = popularAnnouncement.stream()
+                    .map(scoredAnnouncement -> TeamAnnouncementMapper.INSTANCE.entityToResponse(scoredAnnouncement.getAnnouncement()))
+                    .collect(Collectors.toList());
+
+            announcementResponses = announcementResponses.stream()
+                    .skip(pageable.getOffset())
+                    .limit(pageable.getPageSize())
+                    .collect(Collectors.toList());
+        }
 
         JPAQuery<Long> count = queryFactory
                 .select(teamAnnouncement.count())
@@ -60,5 +98,10 @@ public class TeamAnnouncementCustomRepositoryImpl implements TeamAnnouncementCus
                 .set(announcement.views, views)
                 .where(announcement.id.eq(announcementId))
                 .execute();
+    }
+
+    @Override
+    public ScoredAnnouncement createScoredPost(TeamAnnouncement post, double score) {
+        return new ScoredAnnouncement(post, score);
     }
 }
